# new_dash

./: AircraftData.h  CMakeLists.txt  GpsTime.h  Icon.qrc  battery.cpp  battery.h  battery.ui  imu.cpp  imu.h  imu.ui  main.cpp  mainwindow.cpp  mainwindow.h  serial.cpp  serial.h  serialsimulator.cpp  serialsimulator.h  weather.cpp  weather.h
